--- a/app/public/views/home.html
+++ b/app/public/views/home.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <h4>Enter Your Long URL</h4>
-    <form ng-submit = "submit()">
+    <form ng-submit="submit()">
       <div class="form-group">
-        <input class="form-control" type="text" ng-model="longUrl">
+        <input class="form-control" type="text" ng-model="longUrl"/>
       </div>
-      <input type="button" class="btn btn-primary" value="Get Short URL">
+      <input type="submit" class="btn btn-primary" value="Get Short URL"/>
     </form>
   </div>
 </div>
