--- a/app/public/views/url.html
+++ b/app/public/views/url.html
@@ -1,35 +1,10 @@
-<div class="row">
-  <div class="col-md-5 col-md-offset-2">
+<div class="col-md-5 col-md-offset-2">
     <div class="row">
-      <h4>Your Long URL is: </h4>
-      <a ng-href="{{longUrl}}" target="_blank">{{longUrl}}</a>
+        <h4>Your long URL is: </h4>
+        <a ng-href="{{longUrl}}" target="_blank">{{longUrl}}</a>
     </div>
     <div class="row">
-      <h4>Your Short URL is: </h4>
-      <a ng-href="{{shortUrl}}" target="_blank">{{shortUrl}}</a>
+        <h4>Your short URL is: </h4>
+        <a ng-href="{{shortUrl}}" target="_blank">{{shortUrl}}</a>
     </div>
-  </div>
-  <div class="col-md-3">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        Total Clicks
-      </div>
-      <div class="panel-body">
-        {{totalClicks}}
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-6">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        Referer
-      </div>
-      <div class="panel-body">
-        <canvas id="pie" class=>
-        </canvas>
-      </div>
-    </div>
-  </div>
 </div>
