--- a/app/public/views/url.html
+++ b/app/public/views/url.html
@@ -8,3 +8,13 @@
         <a ng-href="{{shortUrl}}" target="_blank">{{shortUrl}}</a>
     </div>
 </div>
+<div class="col-md-3">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+          Total Clicks
+        </div>
+        <div class="panel-body">
+          {{totalClicks}}
+        </div>
+    </div>
+</div>
