--- a/app/public/views/url.html
+++ b/app/public/views/url.html
@@ -1,20 +1,80 @@
-<div class="col-md-5 col-md-offset-2">
-    <div class="row">
-        <h4>Your long URL is: </h4>
-        <a ng-href="{{longUrl}}" target="_blank">{{longUrl}}</a>
-    </div>
-    <div class="row">
-        <h4>Your short URL is: </h4>
-        <a ng-href="{{shortUrl}}" target="_blank">{{shortUrl}}</a>
-    </div>
+<div class="row">
+  <div class="col-md-5 col-md-offset-2">
+      <div class="row">
+          <h4>Your long URL is: </h4>
+          <a ng-href="{{longUrl}}" target="_blank">{{longUrl}}</a>
+      </div>
+      <div class="row">
+          <h4>Your short URL is: </h4>
+          <a ng-href="{{shortUrl}}" target="_blank">{{shortUrl}}</a>
+      </div>
+  </div>
+  <div class="col-md-3">
+      <div class="panel panel-default">
+          <div class="panel-heading">
+            Total Clicks
+          </div>
+          <div class="panel-body">
+            {{totalClicks}}
+          </div>
+      </div>
+  </div>
 </div>
-<div class="col-md-3">
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
     <div class="panel panel-default">
-        <div class="panel-heading">
-          Total Clicks
-        </div>
-        <div class="panel-body">
-          {{totalClicks}}
-        </div>
+      <div class="panel-heading">
+        <a href="javascript:void(0);" ng-click="getTime(hour)" ng-class="{ 'text-muted': time === 'hour'}">Hour</a>
+        <a href="javascript:void(0);" ng-click="getTime(day)" ng-class="{ 'text-muted': time === 'day'}">Day</a>
+        <a href="javascript:void(0);" ng-click="getTime(month)" ng-class="{ 'text-muted': time === 'month'}">Month</a>
+      </div>
+      <div class="panel-body">
+        <canvas id="line" class="chart-line" chart-data="lineData" chart-labels="lineLabels"></canvas>
+      </div>
     </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-6">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Referer
+      </div>
+      <div class="panel-body">
+        <canvas id="pie" class="chart chart-pie" chart-data="pieData" chartLabels="pieLabels" chart-options="chartOptions"></canvas>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Country
+      </div>
+      <div class="panel-body">
+        <canvas id="doughnut" class="chart chart-doughnut" chart-data="doughnutData" chartLabels="doughnutLabels"></canvas>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-6">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Platform
+      </div>
+      <div class="panel-body">
+        <canvas id="bar" class="chart chart-bar" chart-data="barData" chartLabels="barLabels" chart-options="chartOptions"></canvas>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Browser
+      </div>
+      <div class="panel-body">
+        <canvas id="base" class="chart chart-horizontal-bar" chart-data="baseData" chartLabels="baseLabels"></canvas>
+      </div>
+    </div>
+  </div>
 </div>
