--- a/app/public/views/index.html
+++ b/app/public/views/index.html
@@ -7,12 +7,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-resource.min.js"></script>
+    <script src="/node_modules/chart.js/dist/Chart.min.js"></script>
+    <script src="/node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
     <script src="/public/js/app.js"></script>
     <script src="/public/js/controllers/homeController.js"></script>
     <script src="/public/js/controllers/urlController.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
   </head>
+
   <body ng-app="tinyUrlApp">
     <header>
       <div class="container">
@@ -27,4 +29,5 @@
       <div class="ng-view"></div>
     </div>
   </body>
+
 </html>
