--- a/app/public/views/url.html
+++ b/app/public/views/url.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-5 col-md-offset-2">
+  <div class="col-md-10 col-md-offset-2">
       <div class="row">
           <h4>Your long URL is: </h4>
           <a ng-href="{{longUrl}}" target="_blank">{{longUrl}}</a>
@@ -9,7 +9,9 @@
           <a ng-href="{{shortUrl}}" target="_blank">{{shortUrl}}</a>
       </div>
   </div>
-  <div class="col-md-3">
+</div>
+<div class="row">
+  <div class="col-md-6">
       <div class="panel panel-default">
           <div class="panel-heading">
             Total Clicks
@@ -19,17 +21,16 @@
           </div>
       </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-md-8 col-md-offset-2">
+  <div class="col-md-6">
     <div class="panel panel-default">
       <div class="panel-heading">
+        Clicks from the past:
         <a href="javascript:void(0);" ng-click="getTime(hour)" ng-class="{ 'text-muted': time === 'hour'}">Hour</a>
         <a href="javascript:void(0);" ng-click="getTime(day)" ng-class="{ 'text-muted': time === 'day'}">Day</a>
         <a href="javascript:void(0);" ng-click="getTime(month)" ng-class="{ 'text-muted': time === 'month'}">Month</a>
       </div>
       <div class="panel-body">
-        <canvas id="line" class="chart-line" chart-data="lineData" chart-labels="lineLabels"></canvas>
+        <canvas id="line" class="chart chart-line" chart-data="lineData" chart-labels="lineLabels"></canvas>
       </div>
     </div>
   </div>
@@ -41,7 +42,7 @@
         Referer
       </div>
       <div class="panel-body">
-        <canvas id="pie" class="chart chart-pie" chart-data="pieData" chartLabels="pieLabels" chart-options="chartOptions"></canvas>
+        <canvas id="pie" class="chart chart-pie" chart-data="pieData" chart-labels="pieLabels" chart-options="chartOptions"></canvas>
       </div>
     </div>
   </div>
@@ -51,7 +52,7 @@
         Country
       </div>
       <div class="panel-body">
-        <canvas id="doughnut" class="chart chart-doughnut" chart-data="doughnutData" chartLabels="doughnutLabels"></canvas>
+        <canvas id="doughnut" class="chart chart-doughnut" chart-data="doughnutData" chart-labels="doughnutLabels"></canvas>
       </div>
     </div>
   </div>
@@ -63,7 +64,7 @@
         Platform
       </div>
       <div class="panel-body">
-        <canvas id="bar" class="chart chart-bar" chart-data="barData" chartLabels="barLabels" chart-options="chartOptions"></canvas>
+        <canvas id="bar" class="chart chart-bar" chart-data="barData" chart-labels="barLabels" chart-options="chartOptions"></canvas>
       </div>
     </div>
   </div>
@@ -73,7 +74,7 @@
         Browser
       </div>
       <div class="panel-body">
-        <canvas id="base" class="chart chart-horizontal-bar" chart-data="baseData" chartLabels="baseLabels"></canvas>
+        <canvas id="base" class="chart chart-horizontal-bar" chart-data="baseData" chart-labels="baseLabels"></canvas>
       </div>
     </div>
   </div>
